exports[`test renders date picker 1`] = `
<div className="display-inline-block" style={{...}}>
<Styles />
<div style={{...}}>
<Input format={[Function]} defaultValue={[undefined]} today={true} past={true} />
<div className="locked-ends locked-sides" onClick={[Function]} />
</div>
<div id="datepicker">
<div style={{...}}>
<mockConstructor locale="en" localeUtils={{...}} modifiers={{...}} onDayClick={[Function]} />
<div className="background--light-secondary soft text-center">
<button className="btn flush btn--small" onClick={[Function]}>
Done
</button>
</div>
</div>
<div style={{...}} onClick={[Function]} />
</div>
</div>
`;

exports[`test renders with props 1`] = `
<div className="display-inline-block" style={{...}}>
<Styles />
<div style={{...}}>
<Input format={[Function]} defaultValue={[undefined]} today={true} past={true} />
<div className="locked-ends locked-sides" onClick={[Function]} />
</div>
</div>
`;
